--- a/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/troubleshooting.adoc
@@ -1,7 +1,7 @@
 [[troubleshooting]]
 == Troubleshooting Deployment
 
-Under normal circumstances, the deployment process should take approximately 10 minutes. If the deployment is unsuccessful, examining deployment events and pod logs can help identify any issues.
+Under normal circumstances, the deployment process takes approximately 10 minutes. If the deployment is unsuccessful, examining deployment events and pod logs can help identify any issues.
 
 . As a basic user, first retry the failed deployment:
 +
@@ -39,7 +39,7 @@ Liveness and readiness probe failures, like in the output above, indicate the po
 $ oc rsh <pod-name> journalctl -x`
 ------
 +
-. Transferring all logs from the cfme-app pod to a directory on the host for further examination can be useful for troubleshooting. Transfer the logs with the `oc rsync` command:
+. Transferring all logs from the `cfme-app` pod to a directory on the host for further examination can be useful for troubleshooting. Transfer the logs with the `oc rsync` command:
 +
 ------
 $ oc rsync <pod-name>:/persistent/container-deploy/log \ 
@@ -53,6 +53,8 @@ log/sync_pv_data_1477272010.log
 sent 72 bytes  received 1881 bytes  1302.00 bytes/sec
 total size is 1585  speedup is 0.81
 ------
+
+
 
 [[uninstalling]]
 === Uninstalling {product-title} from a Project
