--- a/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
@@ -1,5 +1,5 @@
-= Integration with Red Hat OpenShift Container Platform
-:vernum: 0
+= Integration with OpenShift Container Platform
+:vernum: 4.5
 :doctype: article
 :imagesdir: images
 :toc: left
@@ -8,7 +8,7 @@
 :experimental:
 
 // Custom attributes
-include::common/attributes/miq.adoc[]
+include::common/attributes/cfme.adoc[]
 
 :cfme:
 
@@ -20,8 +20,13 @@ include::common/attributes/miq.adoc[]
 
 include::topics/overview.adoc[]
 
+[[openshift-prerequisites]]
+= Prerequisites
+
+include::topics/prerequisites.adoc[]
+
 [[ose-metrics]]
-= Configuring OpenShift Container Platform Metrics
+= Enabling OpenShift Container Platform Metrics
 
 include::topics/ose-metrics.adoc[]
 
@@ -31,7 +36,7 @@ include::topics/ose-metrics.adoc[]
 include::topics/ose-retrieve-tokens.adoc[]
 
 [[cf-main]]
-= Configuring ManageIQ
+= Configuring {product-title}
 
 include::topics/ose-config-cfmiq.adoc[]
 
@@ -42,7 +47,7 @@ include::topics/ose-config-cfmiq.adoc[]
 include::common/smartstate.adoc[]
 
 [[integration]]
-= Adding the OpenShift Deployment as a Container Provider
+= Adding OpenShift Container Platform as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
 
