--- a/doc-Integration_with_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/miq/index.adoc
@@ -1,5 +1,5 @@
-= Integration with Red Hat OpenShift Container Platform
-:vernum: 4.5
+= Integration with OpenShift Container Platform
+:vernum: 0
 :doctype: article
 :imagesdir: images
 :toc: left
@@ -8,7 +8,7 @@
 :experimental:
 
 // Custom attributes
-include::common/attributes/cfme.adoc[]
+include::common/attributes/miq.adoc[]
 
 :cfme:
 
@@ -20,13 +20,8 @@ include::common/attributes/cfme.adoc[]
 
 include::topics/overview.adoc[]
 
-[[openshift-prerequisites]]
-= Prerequisites
-
-include::topics/prerequisites.adoc[]
-
 [[ose-metrics]]
-= Enabling OpenShift Container Platform Metrics
+= Configuring OpenShift Container Platform Metrics
 
 include::topics/ose-metrics.adoc[]
 
@@ -36,7 +31,7 @@ include::topics/ose-metrics.adoc[]
 include::topics/ose-retrieve-tokens.adoc[]
 
 [[cf-main]]
-= Configuring {product-title}
+= Configuring ManageIQ
 
 include::topics/ose-config-cfmiq.adoc[]
 
@@ -47,7 +42,7 @@ include::topics/ose-config-cfmiq.adoc[]
 include::common/smartstate.adoc[]
 
 [[integration]]
-= Adding OpenShift Container Platform as a Container Provider
+= Adding the OpenShift Deployment as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
 
